task2/homework/nginx2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx2
  name: nginx2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - image: nginx:latest
        name: nginx2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
      volumes:
        - name: config-nginx
          configMap:
            name: nginx2-configmap
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx2
  name: nginx2-np
spec:
  type: NodePort
  selector:
    app: nginx2
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
